# sa-sdk-build-repo

./: 00main.sh  01android-prebuild.sh  01android.sh  01android_prebuild.sh  02flash.sh  03air.sh  03air_moat.sh  04ios-framework-cmake.sh  04ios-framework.sh  04ios-static-air.sh  04ios-static-unity.sh  04ios-static.sh  05unity.sh  05unity_moat.sh  06kws-ios-static.sh  06package.sh  07docs.sh  07kws-ios-framework-cmake.sh  07kws-ios-framework.sh  08kws-android-prebuild.sh  08kws-android.sh  09package.sh  11package.sh  aa-air-build.sh  aa-air-moat-build.sh  aa-android-admob-build.sh  aa-android-build.sh  aa-android-moat-build.sh  aa-android-mopub-build.sh  aa-flash-build.sh  aa-ios-admob-build.sh  aa-ios-build-framework-moat.sh  aa-ios-build-framework.sh  aa-ios-build-static-moat.sh  aa-ios-build-static.sh  aa-ios-mopub-build.sh  aa-unity-build.sh  aa-unity-moat-build.sh  adv-air-build.sh  adv-android-build.sh  (+16 more)
aa-ios-build-framework/framework/src/: CMakeLists.txt  SAFileListDownloader.m  SAProcessHTML.m  SAWebPlayer.m  SuperAwesomeSDK.h  cmake_install.cmake
aa-ios-build-framework/framework/src/Release-iphoneos/SuperAwesomeSDK.framework/: SuperAwesomeSDK
aa-ios-build-framework/framework/src/Release-iphonesimulator/SuperAwesomeSDK.framework/: Info.plist  SuperAwesomeSDK
aa-ios-build-framework/framework/src/Release-iphonesimulator/SuperAwesomeSDK.framework/_CodeSignature/: CodeResources
aa-ios-build-static-moat/static/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
aa-ios-build-static-moat/static/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
aa-ios-build-static-moat/static/SuperAwesomeSDK.build/Release-iphoneos/ZERO_CHECK.build/: dgph
aa-ios-build-static-moat/static/SuperAwesomeSDK.build/Release-iphonesimulator/ZERO_CHECK.build/: Script-2123D6CD7409410A87619942.sh  dgph
aa-ios-build-static-moat/static/SuperAwesomeSDK.xcodeproj/: project.pbxproj
aa-ios-build-static-moat/static/src/: CMakeLists.txt  SAParentalGate.m  cmake_install.cmake
adv-ios-build-framework/framework/src/: CMakeLists.txt  SuperAwesomeAdvertiserSDK.h  cmake_install.cmake
adv-ios-build-framework/framework/src/Release-iphoneos/SuperAwesomeAdvertiserSDK.framework/: Info.plist  SuperAwesomeAdvertiserSDK
adv-ios-build-framework/framework/src/Release-iphonesimulator/SuperAwesomeAdvertiserSDK.framework/: Info.plist  SuperAwesomeAdvertiserSDK
air_build/: SAAIR-3.2.1.ane  (+10 more)
(+307 files in other folders)
